--- a/views/drugs_results.html.twig
+++ b/views/drugs_results.html.twig
@@ -1,3 +1,3 @@
-{% extends "practitioners.html.twig" %}
+{% extends "drugs.html.twig" %}
 
 {% block title %}Résultats de la recherche{% endblock %}
