--- a/views/practitioner_result.html.twig
+++ b/views/practitioner_result.html.twig
@@ -1,3 +1,3 @@
-{% extends "drugs.html.twig" %}
+{% extends "practitioners.html.twig" %}
 
 {% block title %}Résultats de la recherche{% endblock %}
